--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "Date Night App to help user find activities for a night out",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "ejs": "^2.3.2",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.0",
+    "passport-local": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
@@ -24,7 +31,7 @@
     "date",
     "night"
   ],
-  "author": "Miguel, Rick, Allan, Damian",
+  "author": "Miguel, Rick, Allen, Damian",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mmejares/DateNight/issues"
