--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.2",
-    "express-session": "^1.11.3",
-    "morgan": "^1.6.0",
-    "passport-local": "^1.0.0",
-    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.11.3",
     "handlebars": "^4.0.6",
+    "inquirer": "^1.2.3",
+    "morgan": "^1.6.0",
     "mysql": "^2.12.0",
     "passport": "^0.3.2",
-    "path": "^0.12.7"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "require": "^2.4.20"
   },
   "devDependencies": {},
   "scripts": {
