--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.2",
+    "eventful-node": "^1.1.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.11.3",
