changed main point of entry in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datenight",
   "version": "1.0.0",
   "description": "Date Night App to help user find activities for a night out",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
