--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": "root",
     "password": "",
     "database": "my_schema",
-    "host": "localhost",
+    "host": "JAWSDB_URL",
     "dialect": "mysql"
   },
   "test": {
@@ -17,7 +17,7 @@
     "username": "root",
     "password": null,
     "database": "database_production",
-    "host": "127.0.0.1",
+    "host": "JAWSDB_URL",
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
