reverting to older setup

--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,7 @@
     "password": "c2gocdczjsgguet5",
     "database": "database_production",
     "host": "tkck4yllxdrw0bhi.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "use_env_variable": "tkck4yllxdrw0bhi.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
