--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
   "production": {
     "username": "za6tl503zt9023zc",
     "password": "c2gocdczjsgguet5",
-    "database": "database_production",
+    "database": "JAWSDB_URL",
     "host": "tkck4yllxdrw0bhi.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
